# drf-auth

./: db.sqlite3  docker-compose.yml  pyproject.toml
drf-auth/: settings.py  urls.py
electronics/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
electronics/migrations/: 0001_initial.py
